--- a/ASPNetCoreIdentity/ASPNetCoreIdentity/Views/Home/Index.cshtml
+++ b/ASPNetCoreIdentity/ASPNetCoreIdentity/Views/Home/Index.cshtml
@@ -6,3 +6,18 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+
+@if (User.IsInRole("Admin"))
+{
+    <h1>Welcome Admin</h1>
+   
+}
+else if (User.IsInRole("Member"))
+{
+    <h1>Welcome member</h1>
+}
+else
+{
+    <h1>Welcome visitor</h1>
+}
